<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7E6E4"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_account" />

            <ImageView
                android:id="@+id/backarrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:background="@android:color/transparent"
                android:tint="@android:color/white"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                tools:text="Sylvain"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="5sp"
            app:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Chloe" />

                <TextView
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_place"
                    android:drawableTint="#FD6C9E"
                    android:drawablePadding="8dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="25dp"
                    tools:text="Saint-Piere du mont" />

                <TextView
                    android:id="@+id/phone2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawableTint="#FD6C9E"
                    android:drawablePadding="8dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="25dp"
                    tools:text="0878767888888" />

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_language_24"
                    android:drawableTint="#FD6C9E"
                    android:drawablePadding="8dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="25dp"
                    android:paddingBottom="15dp"
                    tools:text="www.facebook.fr/caroline" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="5sp"
            app:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="A propos de moi"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aboutme2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="20dp"
                    tools:text="Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.." />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_neighbour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="270dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="#E7E6E4"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

</FrameLayout>